--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,19 @@
+body {
+   background-image: url(img/background.jpg);
+   background-repeat:round;
+   align-items: center;
+}
+
+h1.tituloregistro{
+   margin-left: 18%;
+   font-size: 35px;
+   font-family: 'Prompt', sans-serif;
+   color: white;
+   text-shadow: 3px 3px 3px rgb(0, 0, 0);
+
+
+}
+
 div.formulario {
 
    border: 1px solid rgb(228, 228, 228);
@@ -5,7 +21,9 @@ div.formulario {
    box-shadow: 5px 5px 5px gray;
    padding: 10px;
    width: 550px;
-   background-color: rgba(135, 206, 250, 0.26);
+   background-color: rgba(230, 230, 230, 0.863);
+   margin-left: 10%;
+   float: left;
    
 }
 
@@ -17,6 +35,8 @@ textarea {
    border: 0px solid red;
    float: left;
    text-align: left;
+   padding: 1px;
+   font-family: 'Quicksand', sans-serif;
 }
 
 .etiqueta {
@@ -24,13 +44,7 @@ textarea {
    margin-left: 30%;
 }
 
-.descriptor, .etiqueta {
-
-   padding: 1px
-
-}
-
-div.botones {
+div.botones{
    margin: auto;
    text-align: center;
 }
